Fix the grid layout problem between .updates and .favourites

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: minmax(60px, auto) minmax(60px, auto) 1fr;
+    grid-template-rows: auto auto 1fr;
     height: 100vh;
 }
 
@@ -51,7 +51,6 @@
 }
 
 .header {
-    
     display: flex;
     justify-content: space-around;
 }
@@ -78,18 +77,74 @@
 .main-content {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 600px auto;
     background-color: var(--main-content-color);
     padding-inline: 1.5rem;
     padding-block: 1rem;
-}
-.heading {
-    font-size: 1.3rem;
-    font-weight: 500;
+    height: 100%;
 }
 
-.popular {
+.heading {
+    font-size: 1.4rem;
+    font-weight: 500;
+    padding-bottom: 1.2rem;
+    padding-left: 0.5rem;
+}
+
+.content {
+    grid-column: 1;
+    grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
+
+.images {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
+    margin-right: 1rem;
+}
+
+.image {
+    background-color: var(--light-font);
+    border-radius: 20px;
+    padding-top: 1.2rem;
+}
+
+.updates {
     grid-column: 2;
+    grid-row: 1;
+}
+
+.trends {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.announcements h3 {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.announcements, 
+.favourites {
+    display: grid;
+    gap: 20px;
+    line-height: calc(1ex / 0.32);
+    background-color: var(--light-font);
+    border-radius: 20px;
+    padding: 1rem;
+    overflow-y: auto;
+}
+
+.trends{
+    grid-column: 2;
+    height: 100%;
+}
+
+.trends span {
+    font-weight: 600;
 }
 
 button {
